--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/chai": "^4.2.8",
     "@types/mocha": "^7.0.1",
     "@types/node": "^13.7.0",
+    "@types/redux": "^3.6.0",
     "chai": "^4.2.0",
     "mocha": "^6.2.0",
     "redux-saga": "^1.1.3",
