--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,9 +9,8 @@
     "target": "ES6",
     "module": "CommonJS",
     "moduleResolution": "node",
-    "rootDir": ".",
+    "rootDir": "./src",
     "outDir": "./dist",
-    "baseUrl": "./src",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "sourceMap": true,
