--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "scripts": {
     "prepublish": "yarn build",
-    "build": "tsc",
+    "build": "yarn clean && tsc",
+    "clean": "rm -rf dist",
+    "lint": "eslint --ext .ts src/ test/",
     "test": "mocha -r ts-node/register -r chai/register-should test/**/*.spec.ts"
   },
   "dependencies": {
@@ -28,8 +30,14 @@
     "@types/mocha": "^7.0.1",
     "@types/node": "^13.7.0",
     "@types/redux": "^3.6.0",
+    "@typescript-eslint/eslint-plugin": "^2.19.0",
+    "@typescript-eslint/parser": "^2.19.0",
     "chai": "^4.2.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-prettier": "^3.1.2",
     "mocha": "^6.2.0",
+    "prettier": "^1.19.1",
     "redux-saga": "^1.1.3",
     "ts-node": "^8.6.2",
     "typescript": "^3.7.5"
