--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "redux-saga-test-factory",
   "version": "1.0.0",
   "main": "dist/index.js",
+  "types": "dist/index.d.js",
   "license": "MIT",
   "repository": {
     "type": "git",
