--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     "stripInternal": true,
     "pretty": true,
     "strictNullChecks": true,
-    "noUnusedLocals": true,
+    "noUnusedLocals": false,
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "typeRoots": [
