--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "redux-saga-test-factory",
   "version": "1.1.1",
   "main": "dist/index.js",
-  "types": "dist/index.d.js",
+  "types": "dist/index.d.ts",
   "license": "MIT",
   "repository": {
     "type": "git",
